@@ -50,6 +50,6 @@ It renders the `_table` partial to display details about the resources.
   ) %>
 </header>
 
-<%= render "table", table_presenter: @page, resources: @resources %>
+<%= render "collection", collection_presenter: @page, resources: @resources %>
 
 <%= paginate @resources %>
