@@ -1,4 +1,7 @@
 * Bug Fix: Fix missing `dropdown.svg` asset.
+* Change: Rename `table` -> `collection` throughout the engine.
+  * API for dashboard classes now relies on `COLLECTION_ATTRIBUTES` constant
+  * Generated views now use the `_collection` partial instead of `_table`
 * Bug Fix: Fix asset precompilation issue for `datetime_picker_rails` gem.
 * Improvement: Add a generator for copying field views to host application
 * Improvement: Generated dashboards are more explicit,
